recursion.logo.spiral.Spiral.scala.error
Compilation error:
Spiral:5: error: identifier expected but ',' found.
  spiral(steps-1.,angle,length+3.,increment)
                 ^Spiral:5: error: identifier expected but ',' found.
  spiral(steps-1.,angle,length+3.,increment)
                                 ^